accept offer works

--- a/Scarb.toml
+++ b/Scarb.toml
@@ -13,8 +13,8 @@ keywords = ["openmark", "starknet", "cairo", "contracts"]
 
 [dependencies]
 starknet = "2.6.3"
-openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.13.0" }
-# openzeppelin = { path = "../cairo-contracts" }
+# openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.13.0" }
+openzeppelin = { path = "../cairo-contracts" }
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.25.0" }
