--- a/Scarb.toml
+++ b/Scarb.toml
@@ -2,7 +2,8 @@
 name = "openmark"
 version = "0.1.0"
 edition = "2023_11"
-cairo-version = "2.6.3"
+cairo-version = "2.6.4"
+scarb-version = "2.6.5"
 authors = ["Grindy Technologies <hello@grindy.io>"]
 description = "OpenMark Contracts written in Cairo for StarkNet, a decentralized ZK Rollup"
 documentation = ""
@@ -12,8 +13,8 @@ license-file = "LICENSE"
 keywords = ["openmark", "starknet", "cairo", "contracts"]
 
 [dependencies]
-starknet = "2.6.3"
-# openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.13.0" }
+starknet = "2.6.4"
+# openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "0.15.0-rc.0" }
 openzeppelin = { path = "../cairo-contracts" }
 
 [dev-dependencies]
