--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "openmark",
   "version": "0.0.1",
   "scripts": {
-    "openmark-tests": "ts-node scripts/run-tests.ts",
     "test": "scarb test",
+    "test:staging": "jest",
+    "test:openmark": "ts-node scripts/run-tests.ts",
     "compile": "scarb build"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/prettier": "^2",
     "@types/yargs": "^17.0.32",
+    "chai": "^5.1.1",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5",
+    "typescript": "^5.5.3",
     "yargs": "^17.7.2"
   },
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "envfile": "^6.18.0",
     "prettier": "^2.8.8",
     "starknet": "6.11.0",
     "starknet-dev": "npm:starknet@6.7.0",
