--- a/Scarb.toml
+++ b/Scarb.toml
@@ -15,7 +15,8 @@ keywords = ["openmark", "starknet", "cairo", "contracts"]
 
 [dependencies]
 starknet = "2.8.0"
-openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.16.0" }
+openzeppelin = { path = "../cairo-contracts" }
+# openzeppelin = { git = "https://github.com/OpenZeppelin/cairo-contracts.git", tag = "v0.16.0" }
 
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.27.0" }
