--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "yargs": "^17.7.2"
   },
   "dependencies": {
+    "@ericnordelo/strk-merkle-tree": "^1.0.0",
     "prettier": "^2.8.8",
     "starknet": "6.11.0",
     "starknet-dev": "npm:starknet@6.7.0",
